--- a/web/all.css
+++ b/web/all.css
@@ -1,5 +1,6 @@
 /*  all.css - Cascaded Style Sheet with all morphem codes
     @(#) $Id$
+    2016-09-22: .Pu = punctuation
     2016-09-20: revised; undo colors with web/unclass.pl
     2006-06-09: colored morphology
     2005-08-18: copied from html/gfis.css
@@ -22,6 +23,7 @@
 .Pp { color:white    ; background-color: crimson    }
 .Pr { color:red      ; background-color: yellow     }
 .Ps { color:white    ; background-cclor: red        }
+.Pu { color:white    ; background-color: black      }
 .Rp { color:black    ; background-color: yellow     }
 .Sb { color:black    ; background-color: pink       }
 .Un { color:white    ; background-color: gray       }
