--- a/web/stylesheet.css
+++ b/web/stylesheet.css
@@ -1,6 +1,7 @@
 /*  stylesheet.css - Cascaded Style Sheet for general use
     @(#) $Id$
-    2016-09-20: revised; undo colors with web/unclass.pl
+    2016-09-22: .Pu = punctuation
+    2016-09-20: revised; undo colors with web/unclass.pl, same as all.css
     2006-06-09: colored morphology
     2005-08-18: copied from html/gfis.css
     2003-07-25: body font-family
@@ -22,6 +23,7 @@
 .Pp { color:white    ; background-color: crimson    }
 .Pr { color:red      ; background-color: yellow     }
 .Ps { color:white    ; background-cclor: red        }
+.Pu { color:white    ; background-color: black      }
 .Rp { color:black    ; background-color: yellow     }
 .Sb { color:black    ; background-color: pink       }
 .Un { color:white    ; background-color: gray       }
