--- a/web/vbav.css
+++ b/web/vbav.css
@@ -22,6 +22,8 @@
 .Nu { color:black    ; background-color: yellow     }
 .Pn { color:white    ; background-color: crimson    }
 .Pr { color:red      ; background-color: yellow     }
+.Ps { color:white    ; background-cclor: red        }
+.Pu { color:white    ; background-color: black      }
 .Rp { color:black    ; background-color: yellow     }
 .Sb { color:black    ; background-color: pink       }
 .Un { color:white    ; background-color: gray       }
